# generalized-semantic-regression

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  minimal_example.py  pip_freeze  pip_freeze.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: publish-to-pypi.yaml  pytests.yaml
RiskBERT/: __init__.py  loss_functions.py  models.py  utils.py
RiskBERT/simulation/: data_functions.py  simulation.py  stock_market_example.py
src/simulation/: data_functions.py  generator.py  generator_2.py  generator_riskbert.py  glm_net.py  glm_test.py  linear.py  model.gv  models.py  simulation.py  torch_gpu.py  utils.py
tests/: test_lossfunctions.py  test_models.py  test_sample.py  test_utils.py
