[project]
name = "RiskBERT"
description = "Generalized semantic regression with a BERT base."
# version = "0.0.2"
dynamic = ["version"]
authors = [
    { name = "Heiko Wagner", email = "heikowagner@t-online.de" }
]
readme = "README.md"

requires-python = ">=3.7"
keywords = ["LLM", "BERT", "GLM"]
license = {text = "BSD-3-Clause"}

dependencies = [
    "pandas",
    "numpy",
    "sentence_transformers",
    "datasets",
    "statsmodels",
    "matplotlib",
    "torch",
    "accelerate",
    "torchview",
    "graphviz"
]

[tool.black]
line-length = 130
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.flake8]
max-line-length = 130
extend-ignore = ["D203", "E203", "E251", "E266", "E302", "E305", "E401", "E402", "E501", "F401", "F403", "W503"]
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.isort]
atomic = true
profile = "black"
line_length = 130
skip_gitignore = true

#[build-system]
#requires = [
#    "flit_core >=3.2,<4",
#]
#build-backend = "flit_core.buildapi"

[tool.setuptools-git-versioning]
enabled = true

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0",
    "setuptools-git-versioning<2"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  "."
  ]